forgot to commit like 8 years ago

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Card Deck</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Shuffle</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/screen.css" />
   </head>
+
   <body>
-    <h1 class='hello-world'></h1>
+    <h1 class="card-shuffle">Shuffle the Cards</h1>
+    <div class="card">
+      <p id="card-suit"></p>
+      <p id="card-rank"></p>
+      <p id="card-suit2"></p>
+    </div>
+    <button class="shuffle-button" input="Shuffle">Get Deck!!</button>
+    <button class="shuffle">Shuffle</button>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
